@@ -1,1 +1,1 @@
-DIST DoorKickers.tar.gz 426342400 SHA256 fd63e0e02dd9175f19c83e6996c8ac618c5bcb4a532ec4ce20dedc2428d23e9a SHA512 7ab9775b179b5b3783fadee060e1d085f9e2555b1d12227667c40b4705a94c2dca74b8ae476a4017232939e7e86bdf12144e9058403f6097dac22bffd0617c8c WHIRLPOOL 0c03bf9c72464249ef64c05439e47d8ef2e7435ab95fce7b9e8417d6d2480ef5c29827dc43f47ab711541f718233d7a6473acc42d75e69e11ed5ed982e9f330d
+DIST DoorKickers.tar.gz 447283200 SHA256 d361f3d08b7f6f06f323b70aac256531a28dd0864221d2e00ff6431d70d1a212 SHA512 8987223d03c681d72adf12168630782f39291c15efe79971d7195d3d46cbfe4a88b81da053edc71867efaa5fb4711cecddef0e5513babc66e95be89a23384c45 WHIRLPOOL 89125f91ef4ebbe582ff51e5fa38b73a0fef4cf0f34e6c5af77bc4359d3c11ea8be0477bce672700931c6342c62171d567cd79724aee9916c5faef6620458d93
